[package]
name = "review-scraper-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fantoccini = "0.19.3"
reqwest = "0.11.14"
scraper = "0.14.0"
serde = "1.0.152"
serde_json = "1.0.93"
tokio = { version = "1.13.0", features = ["full"] }
